--- a/.github/workflows/CI_linux.yml
+++ b/.github/workflows/CI_linux.yml
@@ -76,7 +76,7 @@ jobs:
 
           $SIREUM_HOME/hamr/codegen/bin/build.cmd install-osate-gumbo
 
-          git config user.email "fake@fake.com"
-          git config user.name "fake"
+          git clone https://github.com/santoslab/hamr-system-testing-artifact-generator.git ../hamr-system-testing-artifact-generator
+          sireum proyek assemble --uber -m org.sireum.hamr.systest.generator.SystemTestArtifactGen ../hamr-system-testing-artifact-generator
 
           .ci/test.cmd
